[package]
name = "utf8conv"
version = "0.0.5"
authors = [ "thomaswang1964@yahoo.com" ]
description = "A UTF8 / Unicode Converter for no_std"
license = "MIT OR Apache 2.0"
repository = "https://github.com/tttwang23/utf8conv"
readme = "README.md"
documentation = "https://docs.rs/utf8conv"
publish = ["crates.io"]
keywords = ["utf8", "unicode", "chars", "no_std"]
categories = ["encoding", "localization", "internationalization", "no-std"]
edition = "2018"
autoexamples = false

include = [
  "LICENSE",
  "LICENSE-MIT",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "/src/*.rs",
  "/src/*/*.rs",
  "/examples/*.rs",
  "/benchmarks/*.rs",
  "/tests/*.rs",
  "/doc/*.md"
]

[features]
core = []
alloc = ["core"]
std = ["alloc", "core"]
default = ["core"]
docsrs = []

[dev-dependencies]
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
doc-comment = "0.3"
stackfmt = "0.1.2"

[build-dependencies]
version_check = "0.9"

[[example]]
name = "single_buffer_iterator"
path = "examples/single_buffer_iterator.rs"

[[example]]
name = "multi_buffer_iterator"
path = "examples/multi_buffer_iterator.rs"

[[example]]
name = "multi_buffer_slice_reading"
path = "examples/multi_buffer_slice_reading.rs"

[badges]
maintenance = { status = "experimental" }
